--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 SharkFit 02/SharkFit/wordpress.com-win32-setup-7.2.0.exe
 SharkFit 02/SharkFit/wordpress.com-win32-setup-7.2.0.exe
+SharkFit 02/SharkFit/wordpress.com-win32-setup-7.2.0.exe
